<resources>

    <string name="app_name">woloxapp</string>
    <!-- Strings related to login -->
    <string name="footer_text">By joining you agree to our <u>Terms &amp; Conditions</u></string>
    <string name="login_btn">log in</string>
    <string name="signup_btn">sign up</string>
    <string name="first_name">First Name (recomended)</string>
    <string name="last_name">Last Name (recomended)</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid user: example@domain.com</string>
    <string name="required_fields">All fields are required</string>
    <string name="wolox_web">https://www.wolox.com.ar/</string>
    <string name="login_failure">"Invalid credentials, please try again"</string>
    <!-- TODO: Home -->
    <string name="dummy_button">Books</string>
    <string name="dummy_content">Books</string>
    <string name="logout">Cerrar sesión</string>
    <string name="wolox">Wolox</string>
    <!-- TODO: Signup -->
    <string name="go_back_btn">Volver</string>
    <!-- TODO: Tabs -->
    <string name="tab_news">News</string>
    <string name="tab_profile">Profile</string>
    <string name="empty_news">No news for now</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post">Post</string>

</resources>